
To support DEVPATH strings larger than the maximum file name length, the
private udev database format has changed. If some software still reads the
private files in /dev/.udev/, which it shouldn't, now it's time to fix it.
Please do not port anything to the new format again, everything in /dev/.udev
is and always was private to udev, and may and will change any time without
prior notice.

NAME="%k" causes a warning now. It's is and always was completely superfluous.
It will break kernel supplied DEVNAMEs and therefore it needs to be removed
from all rules.

Symlinks to udevadm with the old command names are no longer resolved to
the udevadm commands.

udev 146
========
Bugfixes.

The udevadm trigger "--retry-failed" option, which is replaced since quite
a while by "--type=failed" is removed.

The failed tracking was not working at all for a few releases. The RUN
option "ignore_error" is replaced by a "fail_event_on_error" option, and the
default is not to track any failing RUN executions.

New keymaps, new modem, hid2hci updated.

udev 145
========
Fix possible crash in udevd when worker processes are busy, rules are
changed at the same time, and workers get killed to reload the rules.

udev 144
========
Bugfixes.

Properties set with ENV{.FOO}="bar" are marked private by starting the
name with a '.'. They will not be stored in the database, and not be
exported with the event.

Firmware files are looked up in:
  /lib/firmware/updates/$(uname -r)
  /lib/firmware/updates
  /lib/firmware/$(uname -r)
  /lib/firmware"
now.

ATA devices switched the property from ID_BUS=scsi to ID_BUS=ata.
ata_id, instead of scsi_id, is the default tool now for ATA devices.

udev 143
========
Bugfixes.

The configure options have changed because another library needs to be
installed in a different location. Instead of exec_prefix and udev_prefix,
libdir, rootlibdir and libexecdir are used. The Details are explained in
the README file.
