@@ -1,7 +1,7 @@
 # do not edit this file, it will be overwritten on update
 
-SUBSYSTEM=="block", SYMLINK+="block/%M:%m"
-SUBSYSTEM!="block", SYMLINK+="char/%M:%m"
+SUBSYSTEM=="block", SYMLINK{unique}+="block/%M:%m"
+SUBSYSTEM!="block", SYMLINK{unique}+="char/%M:%m"
 
 KERNEL=="pty[pqrstuvwxyzabcdef][0123456789abcdef]", GROUP="tty", MODE="0660"
 KERNEL=="tty[pqrstuvwxyzabcdef][0123456789abcdef]", GROUP="tty", MODE="0660"
