@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2003-2008 Kay Sievers <kay.sievers@vrfy.org>
+ * Copyright (C) 2003-2009 Kay Sievers <kay.sievers@vrfy.org>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,6 +19,7 @@
 #include <string.h>
 #include <stdio.h>
 #include <stddef.h>
+#include <stdbool.h>
 #include <fcntl.h>
 #include <unistd.h>
 #include <errno.h>
@@ -30,29 +31,6 @@
 #include "udev.h"
 
 #define TMP_FILE_EXT		".udev-tmp"
-
-/* reverse mapping from the device file name to the devpath */
-static int name_index(struct udev_device *dev, const char *name, int add)
-{
-	struct udev *udev = udev_device_get_udev(dev);
-	char name_enc[UTIL_PATH_SIZE];
-	char filename[UTIL_PATH_SIZE * 2];
-
-	util_path_encode(&name[strlen(udev_get_dev_path(udev))+1], name_enc, sizeof(name_enc));
-	snprintf(filename, sizeof(filename), "%s/.udev/names/%s/%u:%u", udev_get_dev_path(udev), name_enc,
-		 major(udev_device_get_devnum(dev)), minor(udev_device_get_devnum(dev)));
-
-	if (add) {
-		dbg(udev, "creating index: '%s'\n", filename);
-		util_create_path(udev, filename);
-		symlink(udev_device_get_devpath(dev), filename);
-	} else {
-		dbg(udev, "removing index: '%s'\n", filename);
-		unlink(filename);
-		util_delete_path(udev, filename);
-	}
-	return 0;
-}
 
 int udev_node_mknod(struct udev_device *dev, const char *file, dev_t devnum, mode_t mode, uid_t uid, gid_t gid)
 {
@@ -168,7 +146,7 @@ static int node_symlink(struct udev *udev, const char *node, const char *slink)
 			info(udev, "found existing node instead of symlink '%s'\n", slink);
 			if (lstat(node, &stats2) == 0) {
 				if ((stats.st_mode & S_IFMT) == (stats2.st_mode & S_IFMT) &&
-				    stats.st_rdev == stats2.st_rdev) {
+				    stats.st_rdev == stats2.st_rdev && stats.st_ino != stats2.st_ino) {
 					info(udev, "replace device node '%s' with symlink to our node '%s'\n",
 					     slink, node);
 				} else {
@@ -222,153 +200,121 @@ exit:
 	return err;
 }
 
-static int name_index_get_devices(struct udev *udev, const char *name, struct udev_list_node *dev_list)
+/* find device node of device with highest priority */
+static const char *link_find_prioritized(struct udev_device *dev, bool add, const char *stackdir, char *buf, size_t bufsize)
 {
-	char dirname[UTIL_PATH_SIZE];
-	char *s;
-	size_t l;
+	struct udev *udev = udev_device_get_udev(dev);
 	DIR *dir;
-	int count = 0;
+	int priority = 0;
+	const char *target = NULL;
 
-	s = dirname;
-	l = util_strpcpyl(&s, sizeof(dirname), udev_get_dev_path(udev),
-		      "/.udev/names/", NULL);
-	util_path_encode(&name[strlen(udev_get_dev_path(udev))+1], s, l);
-	dir = opendir(dirname);
-	if (dir == NULL) {
-		dbg(udev, "no index directory '%s': %m\n", dirname);
-		count = -1;
-		goto out;
+	if (add) {
+		priority = udev_device_get_devlink_priority(dev);
+		util_strscpy(buf, bufsize, udev_device_get_devnode(dev));
+		target = buf;
 	}
-	dbg(udev, "found index directory '%s'\n", dirname);
 
-	while (1) {
+	dir = opendir(stackdir);
+	if (dir == NULL)
+		return target;
+	for (;;) {
+		struct udev_device *dev_db;
 		struct dirent *dent;
 		char devpath[UTIL_PATH_SIZE];
 		char syspath[UTIL_PATH_SIZE];
-		int len;
+		ssize_t len;
 
 		dent = readdir(dir);
 		if (dent == NULL || dent->d_name[0] == '\0')
 			break;
 		if (dent->d_name[0] == '.')
 			continue;
-
+		dbg(udev, "found '%s/%s'\n", stackdir, dent->d_name);
 		len = readlinkat(dirfd(dir), dent->d_name, devpath, sizeof(devpath));
-		if (len < 0 || (size_t)len >= sizeof(devpath))
+		if (len <= 0 || len == (ssize_t)sizeof(devpath))
 			continue;
 		devpath[len] = '\0';
 		util_strscpyl(syspath, sizeof(syspath), udev_get_sys_path(udev), devpath, NULL);
-		udev_list_entry_add(udev, dev_list, syspath, NULL, 1, 0);
-		count++;
+		info(udev, "found '%s' claiming '%s'\n", syspath, stackdir);
+
+		/* did we find ourself? */
+		if (strcmp(udev_device_get_syspath(dev), syspath) == 0)
+			continue;
+
+		dev_db = udev_device_new_from_syspath(udev, syspath);
+		if (dev_db != NULL) {
+			const char *devnode;
+
+			devnode = udev_device_get_devnode(dev_db);
+			if (devnode != NULL) {
+				dbg(udev, "compare priority of '%s'(%i) > '%s'(%i)\n", target, priority,
+				    udev_device_get_devnode(dev_db), udev_device_get_devlink_priority(dev_db));
+				if (target == NULL || udev_device_get_devlink_priority(dev_db) > priority) {
+					info(udev, "'%s' claims priority %i for '%s'\n",
+					     syspath, udev_device_get_devlink_priority(dev_db), stackdir);
+					priority = udev_device_get_devlink_priority(dev_db);
+					util_strscpy(buf, bufsize, devnode);
+					target = buf;
+				}
+			}
+			udev_device_unref(dev_db);
+		}
 	}
-	closedir(dir);
-out:
-	return count;
+	return target;
 }
 
-static int update_link(struct udev_device *dev, const char *slink)
+/* manage "stack of names" with possibly specified device priorities */
+static void link_update(struct udev_device *dev, const char *slink, bool add)
 {
 	struct udev *udev = udev_device_get_udev(dev);
-	struct udev_list_node dev_list;
-	struct udev_list_entry *dev_entry;
-	char target[UTIL_PATH_SIZE];
-	int count;
-	int priority = 0;
-	int rc = 0;
+	char name_enc[UTIL_PATH_SIZE];
+	char filename[UTIL_PATH_SIZE * 2];
+	char dirname[UTIL_PATH_SIZE];
+	const char *target;
+	char buf[UTIL_PATH_SIZE];
 
 	dbg(udev, "update symlink '%s' of '%s'\n", slink, udev_device_get_syspath(dev));
 
-	udev_list_init(&dev_list);
-	count = name_index_get_devices(udev, slink, &dev_list);
-	if (count > 1)
-		info(udev, "found %i devices with name '%s'\n", count, slink);
+	util_path_encode(&slink[strlen(udev_get_dev_path(udev))+1], name_enc, sizeof(name_enc));
+	snprintf(dirname, sizeof(dirname), "%s/.udev/links/%s", udev_get_dev_path(udev), name_enc);
+	snprintf(filename, sizeof(filename), "%s/%c%u:%u", dirname,
+		 strcmp(udev_device_get_subsystem(dev), "block") == 0 ? 'b' : 'c',
+		 major(udev_device_get_devnum(dev)), minor(udev_device_get_devnum(dev)));
 
-	/* if we don't have a reference, delete it */
-	if (count <= 0) {
+	if (!add) {
+		dbg(udev, "removing index: '%s'\n", filename);
+		unlink(filename);
+		util_delete_path(udev, filename);
+	}
+
+	target = link_find_prioritized(dev, add, dirname, buf, sizeof(buf));
+	if (target == NULL) {
 		info(udev, "no reference left, remove '%s'\n", slink);
 		unlink(slink);
 		util_delete_path(udev, slink);
-		goto out;
+	} else {
+		util_create_path(udev, slink);
+		info(udev, "creating link '%s' to '%s'\n", slink, target);
+		node_symlink(udev, target, slink);
 	}
 
-	/* find the device with the highest priority */
-	target[0] = '\0';
-	udev_list_entry_foreach(dev_entry, udev_list_get_entry(&dev_list)) {
-		const char *syspath;
-		struct udev_device *dev_db;
-		const char *devnode;
-
-		syspath = udev_list_entry_get_name(dev_entry);
-		dbg(udev, "found '%s' for '%s'\n", syspath, slink);
-
-		/* did we find ourself? we win, if we have the same priority */
-		if (strcmp(udev_device_get_syspath(dev), syspath) == 0) {
-			dbg(udev, "compare (our own) priority of '%s' %i >= %i\n",
-			    udev_device_get_devpath(dev), udev_device_get_devlink_priority(dev), priority);
-			if (strcmp(udev_device_get_devnode(dev), slink) == 0) {
-				info(udev, "'%s' is our device node, database inconsistent, skip link update\n",
-				     udev_device_get_devnode(dev));
-			} else if (target[0] == '\0' || udev_device_get_devlink_priority(dev) >= priority) {
-				priority = udev_device_get_devlink_priority(dev);
-				util_strscpy(target, sizeof(target), udev_device_get_devnode(dev));
-			}
-			continue;
-		}
-
-		/* another device, read priority from database */
-		dev_db = udev_device_new_from_syspath(udev, syspath);
-		if (dev_db == NULL)
-			continue;
-		devnode = udev_device_get_devnode(dev_db);
-		if (devnode != NULL) {
-			if (strcmp(devnode, slink) == 0) {
-				info(udev, "'%s' is a device node of '%s', skip link update\n",
-				     devnode, syspath);
-			} else {
-				dbg(udev, "compare priority of '%s' %i > %i\n",
-				    udev_device_get_devpath(dev_db),
-				    udev_device_get_devlink_priority(dev_db),
-				    priority);
-				if (target[0] == '\0' || udev_device_get_devlink_priority(dev_db) > priority) {
-					priority = udev_device_get_devlink_priority(dev_db);
-					util_strscpy(target, sizeof(target), devnode);
-				}
-			}
-		}
-		udev_device_unref(dev_db);
+	if (add) {
+		dbg(udev, "creating index: '%s'\n", filename);
+		util_create_path(udev, filename);
+		symlink(udev_device_get_devpath(dev), filename);
 	}
-	udev_list_cleanup_entries(udev, &dev_list);
-
-	if (target[0] == '\0') {
-		info(udev, "no current target for '%s' found\n", slink);
-		rc = 1;
-		goto out;
-	}
-
-	/* create symlink to the target with the highest priority */
-	info(udev, "'%s' with target '%s' has the highest priority %i, create it\n", slink, target, priority);
-	util_create_path(udev, slink);
-	node_symlink(udev, target, slink);
-out:
-	return rc;
 }
 
 void udev_node_update_old_links(struct udev_device *dev, struct udev_device *dev_old)
 {
 	struct udev *udev = udev_device_get_udev(dev);
 	struct udev_list_entry *list_entry;
-	const char *devnode_old;
 
 	/* update possible left-over symlinks */
 	udev_list_entry_foreach(list_entry, udev_device_get_devlinks_list_entry(dev_old)) {
 		const char *name = udev_list_entry_get_name(list_entry);
 		struct udev_list_entry *list_entry_current;
 		int found;
-
-		/* check if old link name is now our node name */
-		if (strcmp(name, udev_device_get_devnode(dev)) == 0)
-			continue;
 
 		/* check if old link name still belongs to this device */
 		found = 0;
@@ -385,23 +331,7 @@ void udev_node_update_old_links(struct udev_device *dev, struct udev_device *dev
 
 		info(udev, "update old name, '%s' no longer belonging to '%s'\n",
 		     name, udev_device_get_devpath(dev));
-		name_index(dev, name, 0);
-		update_link(dev, name);
-	}
-
-	/*
-	 * if the node name has changed, delete the node,
-	 * and possibly restore a symlink of a different device
-	 */
-	devnode_old = udev_device_get_devnode(dev_old);
-	if (devnode_old != NULL) {
-		const char *devnode = udev_device_get_devnode(dev);
-
-		if (devnode != NULL && strcmp(devnode_old, devnode) != 0) {
-			info(udev, "node has changed from '%s' to '%s'\n", devnode_old, devnode);
-			name_index(dev, devnode_old, 0);
-			update_link(dev, devnode_old);
-		}
+		link_update(dev, name, 0);
 	}
 }
 
@@ -441,13 +371,15 @@ int udev_node_add(struct udev_device *dev, mode_t mode, uid_t uid, gid_t gid)
 		}
 	}
 
-	/* add node to name index */
-	name_index(dev, udev_device_get_devnode(dev), 1);
-
 	/* create/update symlinks, add symlinks to name index */
 	udev_list_entry_foreach(list_entry, udev_device_get_devlinks_list_entry(dev)) {
-		name_index(dev, udev_list_entry_get_name(list_entry), 1);
-		update_link(dev, udev_list_entry_get_name(list_entry));
+		if (udev_list_entry_get_flag(list_entry)) {
+			/* simple unmanaged link name */
+			util_create_path(udev, udev_list_entry_get_name(list_entry));
+			node_symlink(udev, udev_device_get_devnode(dev), udev_list_entry_get_name(list_entry));
+		} else {
+			link_update(dev, udev_list_entry_get_name(list_entry), 1);
+		}
 	}
 exit:
 	return err;
@@ -463,14 +395,9 @@ int udev_node_remove(struct udev_device *dev)
 	int err = 0;
 	int num;
 
-	/* remove node from name index */
-	name_index(dev, udev_device_get_devnode(dev), 0);
-
 	/* remove,update symlinks, remove symlinks from name index */
-	udev_list_entry_foreach(list_entry, udev_device_get_devlinks_list_entry(dev)) {
-		name_index(dev, udev_list_entry_get_name(list_entry), 0);
-		update_link(dev, udev_list_entry_get_name(list_entry));
-	}
+	udev_list_entry_foreach(list_entry, udev_device_get_devlinks_list_entry(dev))
+		link_update(dev, udev_list_entry_get_name(list_entry), 0);
 
 	devnode = udev_device_get_devnode(dev);
 	if (devnode == NULL)
